More moving and renaming of generated classes.

--- a/MusicXMLSharp/MusicXMLSharp.csproj
+++ b/MusicXMLSharp/MusicXMLSharp.csproj
@@ -40,13 +40,57 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Schema\AboveBelow.cs" />
+    <Compile Include="Schema\AccidentalText.cs" />
+    <Compile Include="Schema\AccidentalValue.cs" />
+    <Compile Include="Schema\BackwardForward.cs" />
+    <Compile Include="Schema\BarLine.cs" />
+    <Compile Include="Schema\BarStyle.cs" />
+    <Compile Include="Schema\BarStyleColor.cs" />
+    <Compile Include="Schema\EmptyPrintObjectStyleAlign.cs" />
+    <Compile Include="Schema\EmptyPrintStyleAlign.cs" />
+    <Compile Include="Schema\Ending.cs" />
+    <Compile Include="Schema\Feature.cs" />
+    <Compile Include="Schema\Fermata.cs" />
+    <Compile Include="Schema\FermataShape.cs" />
+    <Compile Include="Schema\Figure.cs" />
+    <Compile Include="Schema\FormattedText.cs" />
+    <Compile Include="Schema\Grouping.cs" />
+    <Compile Include="Schema\Level.cs" />
+    <Compile Include="Schema\MarginType.cs" />
+    <Compile Include="Schema\MeasureLayout.cs" />
+    <Compile Include="Schema\MeasureNumbering.cs" />
+    <Compile Include="Schema\MeasureNumberingValue.cs" />
     <Compile Include="Schema\MusicXMLSchema.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Schema\NameDisplay.cs" />
     <Compile Include="Schema\Opus.cs" />
+    <Compile Include="Schema\OpusActuate.cs" />
     <Compile Include="Schema\OpusShow.cs" />
     <Compile Include="Schema\OpusType.cs" />
+    <Compile Include="Schema\PageLayout.cs" />
+    <Compile Include="Schema\PageMargins.cs" />
+    <Compile Include="Schema\Print.cs" />
+    <Compile Include="Schema\Repeat.cs" />
+    <Compile Include="Schema\RightLeftMiddle.cs" />
     <Compile Include="Schema\ScorePartwise.cs" />
+    <Compile Include="Schema\StaffLayout.cs" />
+    <Compile Include="Schema\StartNote.cs" />
+    <Compile Include="Schema\StartStopContinue.cs" />
+    <Compile Include="Schema\StartStopDiscontinue.cs" />
+    <Compile Include="Schema\StartStopSingle.cs" />
+    <Compile Include="Schema\StyleText.cs" />
+    <Compile Include="Schema\SymbolSize.cs" />
+    <Compile Include="Schema\SystemDividers.cs" />
+    <Compile Include="Schema\SystemLayout.cs" />
+    <Compile Include="Schema\SystemMargins.cs" />
+    <Compile Include="Schema\TrillStep.cs" />
+    <Compile Include="Schema\TwoNoteTurn.cs" />
+    <Compile Include="Schema\UprightInverted.cs" />
+    <Compile Include="Schema\WavyLine.cs" />
+    <Compile Include="Schema\Winged.cs" />
     <Compile Include="Schema\Work.cs" />
+    <Compile Include="Schema\YesNo.cs" />
     <Compile Include="Score.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
